attempted fix of jumpy image bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ html {
     top: 0;
     margin-top: 10vh;
     animation-name: motion;
-    animation-duration: 4s;
+    animation-duration: 3s;
     animation-fill-mode: forwards;
 }
 @keyframes motion {
@@ -165,6 +165,7 @@ footer > p {
     text-align:center;
     border: .25rem solid #000;
     background-color: #000;
+    margin-bottom: -.5rem;
 }
 #footer-about {
     height: 5rem;
@@ -174,7 +175,7 @@ footer > p {
 }
 .social-media-operations {
     text-align: center;
-    margin-left: 3.5rem;
+    /* margin-left: 3.5rem; */
     margin-top: 2.5vh;
 }
 .social-media-operations > li {
@@ -229,7 +230,7 @@ p {
 .home-scroll-style {
     color: #ccc;
     height: 100%;
-    /* width: 100%; */
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.8);
     margin-top: -27vh;
     margin-bottom: 0rem;
@@ -241,7 +242,7 @@ p {
   .about-scroll-style {
     color: #ccc;
     height: 100%;
-    /* width: 100%; */
+    width: 100%;
     background-color: #000;
     margin-top: -27vh;
     margin-bottom: 0rem;
